default-infra-digitalocean/ingress/registry-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hello-kubernetes-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
  - hosts:
    - registry.karol.org.pl
    secretName: hello-kubernetes-tls
  rules:
  - host: registry.karol.org.pl
    http:
      paths:
        - path: /
          pathType: ImplementationSpecific
          backend:
            service:
              name: docker-registry
              port:
                number: 5000
